src/objects/FLAGS__Case_Flags_History_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>FLAGS__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local Automation</fullName>
                </value>
                <value>
                    <fullName>Case Created</fullName>
                </value>
                <value>
                    <fullName>Case Closed</fullName>
                </value>
                <value>
                    <fullName>Set Flag Button</fullName>
                </value>
                <value>
                    <fullName>Clear Flag Button</fullName>
                </value>
                <value>
                    <fullName>External Comment Added</fullName>
                </value>
                <value>
                    <fullName>Internal Comment Added</fullName>
                </value>
                <value>
                    <fullName>Email Received</fullName>
                </value>
                <value>
                    <fullName>Email Sent</fullName>
                </value>
                <value>
                    <fullName>Customer Attachment Added</fullName>
                </value>
                <value>
                    <fullName>Task Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLAGS__Business_Hours_Elapsed__c</fullName>
        <description>Total business hours elapsed during this Tracking record.</description>
        <label>Business Hours Elapsed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Business_Hours_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of business hours on the Case at the time this record was created.</description>
        <label>Business Hours Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Business_Hours_in_Age_1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of business hours spent with flag 1</inlineHelpText>
        <label>Business Hours in Age 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Business_Hours_in_Age_2__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of business hours spent with flag 2</inlineHelpText>
        <label>Business Hours in Age 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Business_Hours_in_Age_3__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of business hours spent with flag 3</inlineHelpText>
        <label>Business Hours in Age 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseTimeOffset1__c</fullName>
        <inlineHelpText>Number of hours spent with flag 1</inlineHelpText>
        <label>Case Flags Age 1 Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseTimeOffset2__c</fullName>
        <inlineHelpText>Number of hours spent with flag 2</inlineHelpText>
        <label>Case Flags Age 2 Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__CaseTimeOffset3__c</fullName>
        <inlineHelpText>Number of hours spent with flag 3</inlineHelpText>
        <label>Case Flags Age 3 Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flag_History_Number__c</fullName>
        <inlineHelpText>Custom autonumber that increments on a Case by Case basis.</inlineHelpText>
        <label>Case Flag History Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Flags_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the Case Flags Business Hours record used to calculate the Case Flag Business Age. This is set automatically and should not be manipulated.</description>
        <label>Case Flags Business Hours</label>
        <referenceTo>FLAGS__CaseFlagsBusinessHours__c</referenceTo>
        <relationshipLabel>Case Flags History Tracking</relationshipLabel>
        <relationshipName>Case_Flags_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case_Status__c</fullName>
        <description>Status of the case at the time this History Tracking record was created.</description>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Flags_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FLAGS__End__c</fullName>
        <inlineHelpText>Datetime marking the ending of tracking for this history record.</inlineHelpText>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLAGS__Event__c</fullName>
        <description>Event that triggered this History Tracking record to be created.</description>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flag Cleared</fullName>
                </value>
                <value>
                    <fullName>Case Owner Changed</fullName>
                </value>
                <value>
                    <fullName>Case Status Changed</fullName>
                </value>
                <value>
                    <fullName>Flag Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLAGS__Flag_Business__c</fullName>
        <description>This should be used to display the Case Flag if your organization is using business hours.</description>
        <formula>IF(NOT(FLAGS__Flag_Set__c),null,IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset4__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c, &quot;L4&quot;, 16, 16), 
IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset3__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c, &quot;L3&quot;, 16, 16), 
IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset2__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c, &quot;L2&quot;, 16, 16),
IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset1__c,
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c, &quot;L1&quot;,16,16),
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c, &quot;L0&quot;,16,16))
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag (BH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Flag_Level_BH__c</fullName>
        <description>Flag level in text (L0 - L4), useful for analytics.</description>
        <formula>IF(NOT(FLAGS__Flag_Set__c),null,IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset4__c, 
&quot;L4&quot;, 
IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset3__c, 
&quot;L3&quot;, 
IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset2__c, 
&quot;L2&quot;, 
IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset1__c, 
&quot;L1&quot;, 
&quot;L0&quot;) 
))))</formula>
        <inlineHelpText>Flag level in text (L0 - L4), useful for analytics.</inlineHelpText>
        <label>Flag Level (BH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Flag_Level__c</fullName>
        <description>Flag level in text (L0 - L4), useful for analytics.</description>
        <formula>IF(NOT(FLAGS__Flag_Set__c),null,IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset4__c, 
&quot;L4&quot;, 
IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset3__c, 
&quot;L3&quot;, 
IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset2__c, 
&quot;L2&quot;, 
IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset1__c, 
&quot;L1&quot;, 
&quot;L0&quot;) 
))))</formula>
        <inlineHelpText>Flag level in text (L0 - L4), useful for analytics.</inlineHelpText>
        <label>Flag Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Flag_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__Flag__c</fullName>
        <description>This should be used to display the Case Flag if your organization is not using business hours.</description>
        <formula>IF(NOT(FLAGS__Flag_Set__c),null,IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset4__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c, &quot;L4&quot;, 16, 16), 
IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset3__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c, &quot;L3&quot;, 16, 16), 
IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset2__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c, &quot;L2&quot;, 16, 16),
IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset1__c,
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c, &quot;L1&quot;,16,16),
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c, &quot;L0&quot;,16,16))
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Hours_Elapsed__c</fullName>
        <description>Number of hours on the Case at the time this record was created.</description>
        <label>Hours Elapsed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Hours_Offset__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total hours elapsed during this Tracking record.</description>
        <label>Hours Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Hours_in_Age_1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of hours spent with flag 1</inlineHelpText>
        <label>Hours in Age 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Hours_in_Age_2__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of hours spent with flag 2</inlineHelpText>
        <label>Hours in Age 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Hours_in_Age_3__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of hours spent with flag 3</inlineHelpText>
        <label>Hours in Age 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLAGS__Owner_Is_Active__c</fullName>
        <formula>FLAGS__Owner__r.IsActive</formula>
        <label>Owner Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLAGS__Owner_License_Type__c</fullName>
        <formula>Text( FLAGS__Owner__r.UserType)</formula>
        <label>Owner License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Owner_Name__c</fullName>
        <description>Case Owner full name</description>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the Case at the time the history record was created unless assigned to a Queue.</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Flags_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLAGS__Queue_Id__c</fullName>
        <description>Id of the Queue the Case was assigned to when this record was created if assigned to a Queue.</description>
        <label>Queue Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLAGS__Start__c</fullName>
        <inlineHelpText>Datetime marking the beginning of tracking for this history record.</inlineHelpText>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <label>Case Flags History Tracking</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Case Flag History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Flags History Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>